# ciagent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  STUDY.md  agentci.yaml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: agentci-template.yml  agentci.yml  ci.yml  release.yml
Plan_docs/: AgentCI2_plan.md  Initial_plan_support_router.md  Uxplan.md  agentci1_summary.md  agentci2_build_summary.md  agentci_ux_improvements.md  execution_plan_agentci2.md  making_agent_friendly.md  manual_testing_guide_v3.md  test-report.md
demo/: record_demo_stability.sh
docs/: ci-cd.md  cost-tracking.md  generate-checks.md  golden-traces.md  import.md  judge-audit.md  langgraph.md  manual_verification_guide.md  mcp.md  metrics_reference.md  promotion.md  quickstart.md  sample_spec.yaml  simulate.md  stability.md  world.md  writing-tests.md
examples/anthropic_agent/: agent.py
examples/ci/: github-actions.yml
examples/demo_agent/: agent.py
examples/openai_agent/: agent.py
plugins/agentci/.claude-plugin/: plugin.json
plugins/agentci/skills/check/: SKILL.md
plugins/ciagent/.claude-plugin/: plugin.json
src/agentci/: __init__.py  assertions.py  baselines.py  capture.py  cli.py  diff_engine.py  mocks.py  models.py
src/agentci/adapters/: openai_agents.py
src/agentci/engine/: check_generator.py  correctness.py  cost.py  judge.py  judge_audit.py  mock_runner.py  parallel.py  path.py  reporter.py  runner.py  span_assertions.py  stability.py
src/agentci/schema/: agentci_spec.schema.json  spec_models.py
src/agentci/templates/: github_action.yml.j2  report.html.j2
src/ciagent/: __init__.py  __main__.py  assertions.py  baselines.py  capture.py  cli.py  config.py  conversation.py  cost.py  diff_engine.py  exceptions.py  loader.py  mcp_server.py  mocks.py  models.py  promotion.py  pytest_plugin.py  redaction.py  report.py  runner.py  world.py  world_mutations.py
src/ciagent/adapters/: __init__.py  base.py  generic.py  langgraph.py  openai_agents.py
src/ciagent/engine/: __init__.py  artifact_gate.py  check_generator.py  correctness.py  cost.py  cost_estimator.py  diff.py  judge.py  judge_audit.py  metrics.py  mock_runner.py  parallel.py  path.py  persona.py  reporter.py  results.py  retrieval.py  runner.py  simulate.py  span_assertions.py  stability.py
src/ciagent/examples/: __init__.py  demo_spec.yaml
src/ciagent/importers/: __init__.py  langsmith.py  otel.py
src/ciagent/schema/: __init__.py  agentci_spec.schema.json  generate_schema.py  spec_models.py
src/ciagent/templates/: agentci.yaml  github_action.yml.j2  pre_push_hook.sh.j2  report.html.j2
tests/: test_artifact_gate.py  test_assertions.py  test_baselines.py  test_capture.py  test_check_generator.py  test_cli.py  test_conversation_envelope.py  test_correctness_engine.py  test_cost.py  test_cost_engine.py  test_cost_estimator.py  test_demo_fallback.py  test_diff_engine.py  test_diff_v2.py  test_doctor.py  test_failure_atlas.py  test_import_langsmith.py  test_import_otel.py  test_json_stdout.py  test_judge.py  test_judge_audit.py  test_mcp_server.py  test_metrics.py  test_mock_runner.py  test_models.py  test_parallel.py  test_path_engine.py  test_plugin_and_bootstrap.py  test_promotion.py  test_promotion_cli.py  test_pytest_integration.py  test_real_agents.py  test_redaction.py  test_reporter.py  test_retrieval_engine.py  test_schema_validation.py  test_simulate.py  test_simulate_personas.py  test_simulate_replay.py  test_simulate_staging.py  (+6 more)
tests/fixtures/: claude_agent_sdk_otel_real.json  crewai_otel_real.json  langfuse_spans_real.json  langsmith_runs_real.json  otel_openllmetry_real.json
tests/fixtures/legacy/: legacy-bare-trace.golden.json  v1-legacy-wrapper.json
tests/integration/: test_judge_live.py
(+15 files in other folders)
