[project]
name = "ciagent"
version = "0.5.0"
description = "Continuous Integration for AI Agents. Catch cost spikes and logic regressions before production."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["ai", "agents", "testing", "llm", "ci-cd", "regression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]



dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "pytest>=7.0",
    "python-dotenv>=0.19",
]

[project.urls]
Documentation = "https://github.com/agentci-org/agentci#readme"
Repository = "https://github.com/agentci-org/agentci.git"
Issues = "https://github.com/agentci-org/agentci/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
langgraph = ["langgraph>=0.1"]
jsonschema = ["jsonschema>=4.0"]
all = ["agentci[openai,anthropic,langgraph,jsonschema]"]
dev = ["pytest>=8.0", "ruff", "mypy"]

[project.scripts]
agentci = "agentci.cli:cli"

[project.entry-points.pytest11]
agentci = "agentci.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentci"]

[tool.hatch.build.targets.sdist]
include = [
  "src/agentci",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
]

[tool.hatch.build]
include = [
  "src/agentci/templates/**/*",
]

[tool.setuptools.package-data]
agentci = ["templates/*.j2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
