[project]
name = "ciagent"
version = "0.13.0"
description = "Find out whether your AI agent's evals are lying to you: stability reports with flip attribution, LLM judge audits, and deterministic checks mined from your KB."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["ai", "agents", "testing", "llm", "ci-cd", "regression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]



dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "pytest>=7.0",
    "python-dotenv>=0.19",
]

[project.urls]
Documentation = "https://github.com/suniel12/ciagent#readme"
Repository = "https://github.com/suniel12/ciagent.git"
Issues = "https://github.com/suniel12/ciagent/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
langgraph = ["langgraph>=0.1"]
jsonschema = ["jsonschema>=4.0"]
mcp = ["mcp>=1.2,<2"]
all = ["ciagent[openai,anthropic,langgraph,jsonschema,mcp]"]
dev = ["pytest>=8.0", "ruff", "mypy", "mcp>=1.2,<2"]

[project.scripts]
ciagent = "ciagent.cli:cli"

[project.entry-points.pytest11]
ciagent = "ciagent.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ciagent"]

[tool.hatch.build.targets.sdist]
include = [
  "src/ciagent",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
]

[tool.hatch.build]
include = [
  "src/ciagent/templates/**/*",
  "src/ciagent/examples/**/*",
]

[tool.setuptools.package-data]
ciagent = ["templates/*.j2", "examples/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
